<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical">


    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearlayout"
        android:layout_marginLeft="@dimen/d25"
        android:layout_marginTop="@dimen/d50"
        android:layout_marginRight="@dimen/d25"
        android:layout_marginBottom="@dimen/d20"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/llShare"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cffffff"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivFlashImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"></ImageView>

            <RelativeLayout
                android:id="@+id/rlKline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/c2A2D4F"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/d35"
                    android:gravity="center"
                    android:text="铜铝1801"
                    android:textColor="@color/cffffff"
                    android:textSize="@dimen/f14" />

                <ImageView
                    android:id="@+id/ivShare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvTitle"
                    android:adjustViewBounds="true" />

            </RelativeLayout>


            <include layout="@layout/dialog_pictureshare_erweima" />
        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/cFFFFFFFF"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:paddingTop="@dimen/d10"
            android:paddingBottom="@dimen/d10">

            <LinearLayout
                android:id="@+id/wexinfriend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_wexinfriend"
                    android:textColor="#333333"
                    android:textSize="@dimen/f14" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/wexinfriends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_wexinfriends"
                    android:textColor="#333333"
                    android:textSize="@dimen/f14" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/qqfriend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_qqfriend"
                    android:textColor="#333333"
                    android:textSize="@dimen/f14" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sinwebo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/txt_sinweibo"
                    android:textColor="#333333"
                    android:textSize="@dimen/f14" />
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/d10"
            android:paddingBottom="@dimen/d10"
            android:text="@string/txt_cancel"
            android:textColor="#333333"
            android:textSize="@dimen/f16" />
    </LinearLayout>


</RelativeLayout>